--- a/pom.xml
+++ b/pom.xml
@@ -55,14 +55,21 @@
       <artifactId>cos</artifactId>
       <version>2017.5</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
+    <!-- https://mvnrepository.com/artifact/net.sf.ehcache/ehcache -->
     <dependency>
-      <groupId>org.ehcache</groupId>
+      <groupId>net.sf.ehcache</groupId>
       <artifactId>ehcache</artifactId>
-      <version>3.1.3</version>
+      <version>2.10.5</version>
     </dependency>
-  </dependencies>
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.49</version>
+    </dependency>
 
+
+  </dependencies>
   <build>
     <finalName>itsupport</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
